<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/add_new_entry_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text|textCapSentences"
            app:layout_constraintStart_toStartOf="@+id/etThoughts"
            app:layout_constraintTop_toBottomOf="@+id/tvError" />

        <EditText
            android:id="@+id/etThoughts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:maxLines="10"
            android:layout_marginStart="@dimen/margin_left_start_wide"
            android:layout_marginLeft="@dimen/margin_left_start_wide"
            android:layout_marginRight="@dimen/margin_left_start_wide"
            android:layout_marginEnd="@dimen/margin_left_start_wide"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:scrollbars="vertical"
            android:gravity="top|start"
            android:hint="@string/thoughts"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="@dimen/padding_text_area"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spMood" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/color_error"
        app:layout_constraintEnd_toEndOf="@+id/tvLabel"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/tvLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvLabel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_left_start"
            android:layout_marginLeft="@dimen/margin_left_start"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:paddingEnd="@dimen/padding_button_right"
            android:paddingLeft="@dimen/padding_button_left"
            android:paddingRight="@dimen/padding_button_right"
            android:paddingStart="@dimen/padding_button_left"
            android:text="@string/save"
            android:paddingTop="@dimen/padding_button_top_bottom"
            android:paddingBottom="@dimen/padding_button_top_bottom"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/etThoughts"
            app:layout_constraintTop_toBottomOf="@+id/etThoughts" />

        <Button
            android:id="@+id/btnDiscard"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/margin_right_end"
            android:layout_marginRight="@dimen/margin_right_end"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background_accent"
            android:paddingEnd="@dimen/padding_button_right"
            android:paddingLeft="@dimen/padding_button_left"
            android:paddingRight="@dimen/padding_button_right"
            android:paddingStart="@dimen/padding_button_left"
            android:paddingTop="@dimen/padding_button_top_bottom"
            android:paddingBottom="@dimen/padding_button_top_bottom"
            android:text="@string/discard"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/etThoughts"
            app:layout_constraintTop_toBottomOf="@+id/etThoughts" />

        <Spinner
            android:id="@+id/spMood"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spinner_padding"
            app:layout_constraintStart_toStartOf="@+id/etThoughts"
            app:layout_constraintTop_toBottomOf="@+id/tvMoodLabel" />

        <TextView
            android:id="@+id/tvMoodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mood"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="@+id/spMood"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />
    </android.support.constraint.ConstraintLayout>
    </ScrollView>

