<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_left_start"
        android:layout_marginStart="@dimen/margin_right_end"
        android:layout_marginRight="@dimen/margin_left_start"
        android:layout_marginLeft="@dimen/margin_right_end"
        android:layout_marginTop="56dp"
        android:text="@string/signup_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/etSignupName"
        app:layout_constraintTop_toBottomOf="@+id/etSignupName" />

    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_left_start"
        android:layout_marginStart="@dimen/margin_right_end"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etSignupEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignupEmail"
        app:layout_constraintTop_toBottomOf="@+id/etSignupEmail"
        android:layout_marginRight="@dimen/margin_left_start"
        android:layout_marginLeft="@dimen/margin_right_end" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show"
        app:layout_constraintStart_toStartOf="@+id/etSignupPassword"
        app:layout_constraintTop_toBottomOf="@+id/etSignupPassword" />

    <TextView
        android:id="@+id/tvSignupError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/margin_right_end"
        android:layout_marginStart="@dimen/margin_left_start"
        android:layout_marginRight="@dimen/margin_right_end"
        android:layout_marginLeft="@dimen/margin_left_start"
        android:text=""
        android:textColor="@color/color_error"
        app:layout_constraintBottom_toTopOf="@+id/etSignupEmail"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/btnSignupSubmit"
        android:layout_width="@dimen/button_width_wide"
        android:layout_height="@dimen/button_height_wide"
        android:layout_marginBottom="156dp"
        android:layout_marginEnd="@dimen/margin_right_end"
        android:layout_marginStart="@dimen/margin_left_start"
        android:layout_marginTop="@dimen/list_item_horizontal_margin"
        android:background="@drawable/button_background_disabled"
        android:enabled="false"
        android:paddingEnd="@dimen/padding_button_right"
        android:paddingLeft="@dimen/padding_button_left"
        android:paddingRight="@dimen/padding_button_right"
        android:paddingStart="@dimen/padding_button_left"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etSignupPassword"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="@+id/etSignupPassword"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.486"
        android:layout_marginRight="@dimen/margin_right_end"
        android:layout_marginLeft="@dimen/margin_left_start" />

    <EditText
        android:id="@+id/etSignupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_right_end"
        android:layout_marginStart="@dimen/margin_left_start"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="@dimen/margin_right_end"
        android:layout_marginLeft="@dimen/margin_left_start" />

    <Button
        android:id="@+id/btnSignupSigninButton"
        android:layout_width="@dimen/button_width_wide"
        android:layout_height="@dimen/button_height_wide"
        android:layout_marginEnd="@dimen/margin_right_end"
        android:layout_marginStart="@dimen/margin_left_start"
        android:layout_marginTop="@dimen/list_item_horizontal_margin"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/padding_text_button"
        android:text="@string/signin"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnSignupSubmit"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/btnSignupSubmit"
        app:layout_constraintTop_toBottomOf="@+id/btnSignupSubmit"
        android:layout_marginRight="@dimen/margin_right_end"
        android:layout_marginLeft="@dimen/margin_left_start" />

    <ProgressBar
        android:id="@+id/progressBarSignup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/margin_right_end"
        android:layout_marginStart="@dimen/margin_left_start"
        android:layout_marginRight="@dimen/margin_right_end"
        android:layout_marginLeft="@dimen/margin_left_start"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />
</android.support.constraint.ConstraintLayout>